namespace Todo.Core.Entities;

public class Label
{
    public int Id { get; }
    public string Name { get; }
    public string Color { get; }
}